--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -13,6 +13,12 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v3
 
+      - name: Instalando docker compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
+
       - name: Login no dockerhub
         uses: docker/login-action@v3
         with:
