--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -1,4 +1,4 @@
-name: Publicar imagem docker
+name: Publicar imagem Docker
 
 on:
   push:
@@ -13,13 +13,13 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Instalando docker compose
+      - name: Instalando Docker Compose
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version
 
-      - name: Login no dockerhub
+      - name: Login no Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -28,11 +28,8 @@ jobs:
       - name: Construir a imagem da aplicação
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/docker-commerce:v1_alpine .
 
-      - name: Subir os containeres app e mongo
-        run: docker-compose up --build
-        
-      - name: Empurrar imagem
+      - name: Empurrar imagem para o Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/docker-commerce:v1_alpine
 
-
-
+      - name: Subir os containers app e mongo com Docker Compose
+        run: docker-compose up -d --build
